traefik/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: kube-system

spec:
  basicAuth:
    secret: traefik-dashboard
